--- a/staircase/pom.xml
+++ b/staircase/pom.xml
@@ -32,11 +32,12 @@
 			<scope>test</scope>
 		</dependency>
 		
-		<dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
-        </dependency>
+				<dependency>
+		    <groupId>org.hsqldb</groupId>
+		    <artifactId>hsqldb</artifactId>
+		    <version>2.4.0</version>
+		    <scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
