--- a/staircase/pom.xml
+++ b/staircase/pom.xml
@@ -38,7 +38,31 @@
 		    <version>2.4.0</version>
 		    <scope>runtime</scope>
 		</dependency>
+		
+		 <!-- JSTL Dependency -->
+        <dependency>
+            <groupId>javax.servlet.jsp.jstl</groupId>
+            <artifactId>javax.servlet.jsp.jstl-api</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>taglibs</groupId>
+            <artifactId>standard</artifactId>
+            <version>1.1.2</version>
+        </dependency>
+        
+        <dependency>
+	    <groupId>org.apache.tomcat</groupId>
+	    <artifactId>tomcat-jasper</artifactId>
+	    <version>9.0.43</version>
+		</dependency>
+        
+        
+        
+        
 	</dependencies>
+	
+	
 
 	<build>
 		<plugins>
