--- a/staircase/src/main/resources/application.properties
+++ b/staircase/src/main/resources/application.properties
@@ -1,5 +1,10 @@
+spring.mvc.view.prefix=/pages/
+spring.mvc.view.suffix=.jsp
+server.error.path=/error
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
 spring.datasource.url=jdbc:hsqldb:mem:testdb;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create
+
+
